Complemento de ajustes

--- a/index.html
+++ b/index.html
@@ -643,233 +643,305 @@
         >
       </div>
     </section>
-<!-- ================= RECEITAS ================= -->
-<section class="container my-5 receitas-section">
-  <h2 class="receitas-title text-center mb-4">
-    CONFIRA AS MELHORES <span>RECEITAS</span>
-  </h2>
+    <!-- ================= RECEITAS ================= -->
+    <section class="container my-5 receitas-section">
+      <h2 class="receitas-title text-center mb-4">
+        CONFIRA AS MELHORES <span>RECEITAS</span>
+      </h2>
 
-  <div class="row g-4">
-    <!-- CARD 1 -->
-    <div class="col-12 col-md-6 col-lg-3">
-      <a href="pages/receita-mignon.html" class="receita-card d-block h-100">
-        <img src="img/produtos/receita-contra-file.png" class="receita-img" alt="Centro de Mignon grelhado com manteiga de ervas">
-        <div class="receita-body">
-          <h3 class="receita-name">CENTRO DE MIGNON GRELHADO COM MANTEIGA DE ERVAS</h3>
-          <p class="receita-porcoes">4 PORÇÕES</p>
-          <div class="receita-info">
-            <span class="dif"><i class="icon-diff"></i> INICIANTE</span>
-            <span class="tempo"><i class="icon-time"></i> 80 MIN</span>
-          </div>
+      <div class="row g-4">
+        <!-- CARD 1 -->
+        <div class="col-12 col-md-6 col-lg-3">
+          <a
+            href="pages/receita-mignon.html"
+            class="receita-card d-block h-100"
+          >
+            <img
+              src="img/produtos/receita-contra-file.png"
+              class="receita-img"
+              alt="Centro de Mignon grelhado com manteiga de ervas"
+            />
+            <div class="receita-body">
+              <h3 class="receita-name">
+                CENTRO DE MIGNON GRELHADO COM MANTEIGA DE ERVAS
+              </h3>
+              <p class="receita-porcoes">4 PORÇÕES</p>
+              <div class="receita-info">
+                <span class="dif"><i class="icon-diff"></i> INICIANTE</span>
+                <span class="tempo"><i class="icon-time"></i> 80 MIN</span>
+              </div>
+            </div>
+          </a>
         </div>
-      </a>
-    </div>
 
-    <!-- CARD 2 -->
-    <div class="col-12 col-md-6 col-lg-3">
-      <a href="pages/receita-contra-file.html" class="receita-card d-block h-100">
-        <img src="img/produtos/receita-carne.png" class="receita-img" alt="Bife de contra filé grelhado com arroz e feijão">
-        <div class="receita-body">
-          <h3 class="receita-name">BIFE DE CONTRA FILÉ GRELHADO COM ARROZ E FEIJÃO</h3>
-          <p class="receita-porcoes">4 PORÇÕES</p>
-          <div class="receita-info">
-            <span class="dif"><i class="icon-diff"></i> INICIANTE</span>
-            <span class="tempo"><i class="icon-time"></i> 20 MIN</span>
-          </div>
+        <!-- CARD 2 -->
+        <div class="col-12 col-md-6 col-lg-3">
+          <a
+            href="pages/receita-contra-file.html"
+            class="receita-card d-block h-100"
+          >
+            <img
+              src="img/produtos/receita-carne.png"
+              class="receita-img"
+              alt="Bife de contra filé grelhado com arroz e feijão"
+            />
+            <div class="receita-body">
+              <h3 class="receita-name">
+                BIFE DE CONTRA FILÉ GRELHADO COM ARROZ E FEIJÃO
+              </h3>
+              <p class="receita-porcoes">4 PORÇÕES</p>
+              <div class="receita-info">
+                <span class="dif"><i class="icon-diff"></i> INICIANTE</span>
+                <span class="tempo"><i class="icon-time"></i> 20 MIN</span>
+              </div>
+            </div>
+          </a>
         </div>
-      </a>
-    </div>
 
-    <!-- CARD 3 -->
-    <div class="col-12 col-md-6 col-lg-3">
-      <a href="pages/receita-costela.html" class="receita-card d-block h-100">
-        <img src="img/produtos/receita-file.png" class="receita-img" alt="Costela suína brown sugar + acompanhamentos">
-        <div class="receita-body">
-          <h3 class="receita-name">COSTELA SUÍNA BROWN SUGAR + ACOMPANHAMENTOS</h3>
-          <p class="receita-porcoes">4 PORÇÕES</p>
-          <div class="receita-info">
-            <span class="dif dif-inter"><i class="icon-diff"></i> INTERMEDIÁRIO</span>
-            <span class="tempo"><i class="icon-time"></i> 70 MIN</span>
-          </div>
+        <!-- CARD 3 -->
+        <div class="col-12 col-md-6 col-lg-3">
+          <a
+            href="pages/receita-costela.html"
+            class="receita-card d-block h-100"
+          >
+            <img
+              src="img/produtos/receita-file.png"
+              class="receita-img"
+              alt="Costela suína brown sugar + acompanhamentos"
+            />
+            <div class="receita-body">
+              <h3 class="receita-name">
+                COSTELA SUÍNA BROWN SUGAR + ACOMPANHAMENTOS
+              </h3>
+              <p class="receita-porcoes">4 PORÇÕES</p>
+              <div class="receita-info">
+                <span class="dif dif-inter"
+                  ><i class="icon-diff"></i> INTERMEDIÁRIO</span
+                >
+                <span class="tempo"><i class="icon-time"></i> 70 MIN</span>
+              </div>
+            </div>
+          </a>
         </div>
-      </a>
-    </div>
 
-    <!-- CARD 4 -->
-    <div class="col-12 col-md-6 col-lg-3">
-      <a href="pages/receita-babybeef.html" class="receita-card d-block h-100">
-        <img src="img/produtos/receita-file.png" class="receita-img" alt="Baby beef com salada de beterraba e queijo de cabra">
-        <div class="receita-body">
-          <h3 class="receita-name">BABY BEEF COM SALADA DE BETERRABA E QUEIJO DE CABRA</h3>
-          <p class="receita-porcoes">4 PORÇÕES</p>
-          <div class="receita-info">
-            <span class="dif dif-inter"><i class="icon-diff"></i> INTERMEDIÁRIO</span>
-            <span class="tempo"><i class="icon-time"></i> 45 MIN</span>
-          </div>
-        </div>
-      </a>
-    </div>
-  </div>
-
-  <!-- Botão CTA -->
-  <div class="text-center mt-4">
-    <a href="pages/receitas.html" class="btn btn-receitas">VER TODAS AS RECEITAS</a>
-  </div>
-</section>
-
-      <!-- ================= BANNER GALERIA - VER COMO FAZ DEPOIS ================= -->
-      <section class="container my-4">
-        <div class="hero-banner rounded-4 overflow-hidden">
-          <!-- coloque suas imagens em /img/hero.jpg e /img/hero-mobile.jpg -->
-          <img
-            src="img/banners/sessão 6 (banners).png"
-            alt="Promoções Swift"
-            class="w-100 d-none d-md-block"
-          />
-          <img
-            src="img/hero-mobile.jpg"
-            alt="Promoções Swift"
-            class="w-100 d-md-none"
-          />
-        </div>
-      </section>
-
-
-    <!-- ================= BANNER FOOTER ================= -->
-    <footer class="footer-swift text-light">
-  <div class="container">
-
-    <!-- topo: colunas -->
-    <div class="footer-top">
-      <!-- Coluna 1: marca + formas de pagamento -->
-      <div class="f-col">
-        <img src="img/banners/swift logo 1.png" alt="Swift" class="f-logo" />
-        <div class="f-block">
-          <p class="f-title">Formas de pagamento</p>
-          <div class="pay-logos">
-            <img src="img/icones/logos_mastercard.png" alt="Mastercard">
-            <img src="img/icones/logos_visa.png" alt="Visa">
-            <img src="img/icones/ic_baseline-pix.png" alt="Pix">
-            <img src="img/icones/simple-icons_picpay.png" alt="Picpay">
-            <img src="img/icones/logos_elo.png" alt="Elo">
-          </div>
+        <!-- CARD 4 -->
+        <div class="col-12 col-md-6 col-lg-3">
+          <a
+            href="pages/receita-babybeef.html"
+            class="receita-card d-block h-100"
+          >
+            <img
+              src="img/produtos/receita-file.png"
+              class="receita-img"
+              alt="Baby beef com salada de beterraba e queijo de cabra"
+            />
+            <div class="receita-body">
+              <h3 class="receita-name">
+                BABY BEEF COM SALADA DE BETERRABA E QUEIJO DE CABRA
+              </h3>
+              <p class="receita-porcoes">4 PORÇÕES</p>
+              <div class="receita-info">
+                <span class="dif dif-inter"
+                  ><i class="icon-diff"></i> INTERMEDIÁRIO</span
+                >
+                <span class="tempo"><i class="icon-time"></i> 45 MIN</span>
+              </div>
+            </div>
+          </a>
         </div>
       </div>
 
-      <!-- Coluna 2: Fale Conosco -->
-      <div class="f-col">
-        <p class="f-heading">Fale conosco</p>
+      <!-- Botão CTA -->
+      <div class="text-center mt-4">
+        <a href="pages/receita.html" class="btn btn-receitas"
+          >VER TODAS AS RECEITAS</a
+        >
+      </div>
+    </section>
 
-        <div class="f-item">
-          <img src="img/icones/ic_round-phone.png" alt="" aria-hidden="true">
-          <div>
-            <small>Ligue para</small>
-            <strong>0800 400 2892</strong>
+    <!-- ================= BANNER GALERIA - VER COMO FAZ DEPOIS ================= -->
+    <section class="container my-4">
+      <div class="hero-banner rounded-4 overflow-hidden">
+        <!-- coloque suas imagens em /img/hero.jpg e /img/hero-mobile.jpg -->
+        <img
+          src="img/banners/sessão 6 (banners).png"
+          alt="Promoções Swift"
+          class="w-100 d-none d-md-block"
+        />
+        <img
+          src="img/hero-mobile.jpg"
+          alt="Promoções Swift"
+          class="w-100 d-md-none"
+        />
+      </div>
+    </section>
+
+    <!-- ================= BANNER FOOTER ================= -->
+    <footer class="footer-swift text-light">
+      <div class="container">
+        <!-- topo: colunas -->
+        <div class="footer-top">
+          <!-- Coluna 1: marca + formas de pagamento -->
+          <div class="f-col">
+            <img
+              src="img/banners/swift logo 1.png"
+              alt="Swift"
+              class="f-logo"
+            />
+            <div class="f-block">
+              <p class="f-title">Formas de pagamento</p>
+              <div class="pay-logos">
+                <img src="img/icones/logos_mastercard.png" alt="Mastercard" />
+                <img src="img/icones/logos_visa.png" alt="Visa" />
+                <img src="img/icones/ic_baseline-pix.png" alt="Pix" />
+                <img src="img/icones/simple-icons_picpay.png" alt="Picpay" />
+                <img src="img/icones/logos_elo.png" alt="Elo" />
+              </div>
+            </div>
+          </div>
+
+          <!-- Coluna 2: Fale Conosco -->
+          <div class="f-col">
+            <p class="f-heading">Fale conosco</p>
+
+            <div class="f-item">
+              <img
+                src="img/icones/ic_round-phone.png"
+                alt=""
+                aria-hidden="true"
+              />
+              <div>
+                <small>Ligue para</small>
+                <strong>0800 400 2892</strong>
+              </div>
+            </div>
+
+            <div class="f-item">
+              <div>
+                <small>Horários de funcionamento:</small>
+                <p class="f-txt">
+                  Segunda à Sexta-feira das 9h às 18h<br />
+                  Sábados e feriados das 9h às 15h
+                </p>
+              </div>
+            </div>
+
+            <div class="f-item">
+              <img
+                src="img/icones/clarity_email-solid.png"
+                alt=""
+                aria-hidden="true"
+              />
+              <div>
+                <small>Email:</small>
+                <a href="mailto:atendimento@swift.com.br" class="f-link"
+                  >Clique aqui</a
+                >
+              </div>
+            </div>
+          </div>
+
+          <!-- Coluna 3: Ajuda e Informações -->
+          <div class="f-col">
+            <p class="f-heading">Ajuda e Informações</p>
+            <ul class="f-links">
+              <li><a href="#">Trabalhe Conosco</a></li>
+              <li><a href="#">Política de Privacidade</a></li>
+              <li><a href="#">Dúvidas Frequentes</a></li>
+            </ul>
+          </div>
+
+          <!-- Coluna 4: Sua compra -->
+          <div class="f-col">
+            <p class="f-heading">Sua Compra</p>
+            <ul class="f-links">
+              <li><a href="#">Seus Pedidos</a></li>
+              <li><a href="#">FAQ</a></li>
+              <li><a href="#">Regulamentos</a></li>
+              <li><a href="#">App Swift</a></li>
+              <li><a href="#">Encarte Digital</a></li>
+            </ul>
+          </div>
+
+          <!-- Coluna 5: Institucional -->
+          <div class="f-col">
+            <p class="f-heading">Institucional</p>
+            <ul class="f-links">
+              <li><a href="#">Nossa história</a></li>
+              <li><a href="#">Encontre nossas lojas</a></li>
+              <li><a href="#">Sustentabilidade</a></li>
+            </ul>
           </div>
         </div>
 
-        <div class="f-item">
-          <div>
-            <small>Horários de funcionamento:</small>
-            <p class="f-txt">
-              Segunda à Sexta-feira das 9h às 18h<br>
-              Sábados e feriados das 9h às 15h
+        <!-- middle: CTAs + horários -->
+        <div class="footer-cta">
+          <a
+            href="https://wa.me/551140208558"
+            target="_blank"
+            rel="noopener"
+            class="cta-card cta-whatsapp"
+          >
+            <span class="cta-left">
+              <img
+                src="img/icones/refactoring-whatsapp-icone.png"
+                alt=""
+                aria-hidden="true"
+              />
+              <span>
+                <strong>Compre pelo WhatsApp</strong>
+                <small>(11) 4020-85588</small>
+              </span>
+            </span>
+            <span class="cta-right">
+              <span class="cta-arrow" aria-hidden="true">➜</span>
+            </span>
+          </a>
+
+          <a href="tel:11402085588" class="cta-card cta-tele">
+            <span class="cta-left">
+              <img src="img/icones/wpf_headset.png" alt="" aria-hidden="true" />
+              <span>
+                <strong>Compre pelo TeleVendas</strong>
+                <small>(11) 4020-85588</small>
+              </span>
+            </span>
+            <span class="cta-right">
+              <span class="cta-arrow" aria-hidden="true">➜</span>
+            </span>
+          </a>
+
+          <div class="footer-hours">
+            <p class="f-heading">HORÁRIOS DE FUNCIONAMENTO:</p>
+            <p class="hours">
+              <strong>Segunda à Sexta-feira</strong> das 7h às 19h<br />
+              <strong>Sábados</strong> das 7h às 18h<br />
+              <strong>Feriados</strong> das 7h às 15h
             </p>
           </div>
         </div>
 
-        <div class="f-item">
-          <img src="img/icones/clarity_email-solid.png" alt="" aria-hidden="true">
-          <div>
-            <small>Email:</small>
-            <a href="mailto:atendimento@swift.com.br" class="f-link">Clique aqui</a>
+        <!-- bottom: redes + direitos -->
+        <div class="footer-bottom">
+          <div class="socials">
+            <a href="#" aria-label="Instagram"
+              ><img src="img/icones/Icone Instagram.png" alt=""
+            /></a>
+            <a href="#" aria-label="Facebook"
+              ><img src="img/icones/cib_facebook.png" alt=""
+            /></a>
+            <a href="#" aria-label="LinkedIn"
+              ><img src="img/icones/Icone Linkedin.png" alt=""
+            /></a>
+            <a href="#" aria-label="YouTube"
+              ><img src="img/icones/Icone youtube.png" alt=""
+            /></a>
           </div>
+          <p class="copy small mb-0">
+            &copy; 2025 Swift — Todos os direitos reservados
+          </p>
         </div>
       </div>
-
-      <!-- Coluna 3: Ajuda e Informações -->
-      <div class="f-col">
-        <p class="f-heading">Ajuda e Informações</p>
-        <ul class="f-links">
-          <li><a href="#">Trabalhe Conosco</a></li>
-          <li><a href="#">Política de Privacidade</a></li>
-          <li><a href="#">Dúvidas Frequentes</a></li>
-        </ul>
-      </div>
-
-      <!-- Coluna 4: Sua compra -->
-      <div class="f-col">
-        <p class="f-heading">Sua Compra</p>
-        <ul class="f-links">
-          <li><a href="#">Seus Pedidos</a></li>
-          <li><a href="#">FAQ</a></li>
-          <li><a href="#">Regulamentos</a></li>
-          <li><a href="#">App Swift</a></li>
-          <li><a href="#">Encarte Digital</a></li>
-        </ul>
-      </div>
-
-      <!-- Coluna 5: Institucional -->
-      <div class="f-col">
-        <p class="f-heading">Institucional</p>
-        <ul class="f-links">
-          <li><a href="#">Nossa história</a></li>
-          <li><a href="#">Encontre nossas lojas</a></li>
-          <li><a href="#">Sustentabilidade</a></li>
-        </ul>
-      </div>
-    </div>
-
-    <!-- middle: CTAs + horários -->
-    <div class="footer-cta">
-      <a href="https://wa.me/551140208558" target="_blank" rel="noopener" class="cta-card cta-whatsapp">
-        <span class="cta-left">
-          <img src="img/icones/refactoring-whatsapp-icone.png" alt="" aria-hidden="true">
-          <span>
-            <strong>Compre pelo WhatsApp</strong>
-            <small>(11) 4020-85588</small>
-          </span>
-        </span>
-        <span class="cta-right">
-          <span class="cta-arrow" aria-hidden="true">➜</span>
-        </span>
-      </a>
-
-      <a href="tel:11402085588" class="cta-card cta-tele">
-        <span class="cta-left">
-          <img src="img/icones/wpf_headset.png" alt="" aria-hidden="true">
-          <span>
-            <strong>Compre pelo TeleVendas</strong>
-            <small>(11) 4020-85588</small>
-          </span>
-        </span>
-        <span class="cta-right">
-          <span class="cta-arrow" aria-hidden="true">➜</span>
-        </span>
-      </a>
-
-      <div class="footer-hours">
-        <p class="f-heading">HORÁRIOS DE FUNCIONAMENTO:</p>
-        <p class="hours">
-          <strong>Segunda à Sexta-feira</strong> das 7h às 19h<br>
-          <strong>Sábados</strong> das 7h às 18h<br>
-          <strong>Feriados</strong> das 7h às 15h
-        </p>
-      </div>
-    </div>
-
-    <!-- bottom: redes + direitos -->
-    <div class="footer-bottom">
-      <div class="socials">
-        <a href="#" aria-label="Instagram"><img src="img/icones/Icone Instagram.png" alt=""></a>
-        <a href="#" aria-label="Facebook"><img src="img/icones/cib_facebook.png" alt=""></a>
-        <a href="#" aria-label="LinkedIn"><img src="img/icones/Icone Linkedin.png" alt=""></a>
-        <a href="#" aria-label="YouTube"><img src="img/icones/Icone youtube.png" alt=""></a>
-      </div>
-      <p class="copy small mb-0">
-        &copy; 2025 Swift — Todos os direitos reservados
-      </p>
-    </div>
-
-  </div>
-</footer>
+    </footer>
+  </body>
+</html>
