--- a/index.html
+++ b/index.html
@@ -653,7 +653,7 @@
         <!-- CARD 1 -->
         <div class="col-12 col-md-6 col-lg-3">
           <a
-            href="pages/receita-mignon.html"
+            href="pages/detalhe-produto.html"
             class="receita-card d-block h-100"
           >
             <img
