Criacao da pagina receitas e correcao do link do botao (ver mais receitas) na home

--- a/index.html
+++ b/index.html
@@ -753,7 +753,7 @@
 
       <!-- Botão CTA -->
       <div class="text-center mt-4">
-        <a href="pages/receita.html" class="btn btn-receitas"
+        <a href="pages/receitas.html" class="btn btn-receitas"
           >VER TODAS AS RECEITAS</a
         >
       </div>
