correção do segundo banner, titulos e texto, adição do botão confira

--- a/pages/produtos.html
+++ b/pages/produtos.html
@@ -905,8 +905,13 @@
                 <img src="../img/banners/encontre-os-melhores-prod....png" alt="Carnes Swift" class="img-fluid">
               </div>
               <div class="col-md-9 col-lg-8 p-5">
-                <h1 class="fw-bold display-5 ">Carnes bovinas selecionadas e de alta qualidade</h1>
-                <p class="display-5 fs-5">Aqui na Swift você encontra os mais diferentes tipos de cortes de carne para o dia a dia ou para o seu churrasco, tudo com a mais alta qualidade para a sua segurança.<br><br>Ideal para quem procura a famosa carne de boi, você poderá encontrar diferentes tipos de cortes e linhas exclusivas, direto do nosso freezer para a sua panela.</p>
+                <h1 class="fw-bold display-5 ">Encontre os melhores produtos na Swift</h1>
+                <p class="display-5 fs-5">O melhor do churrasco você encontra aqui na Swift. São diversos cortes de carne bovina, além de linguiças, espetinhos e cortes especiais para mandar bem no churras com muito sabor e produtos selecionados especialmente para você.</p>
+                <h1 class="fw-bold display-5 "> Conheça a linha Swift Mais</h1>
+                <p class="display-5 fs-5">A nova linha Swift Mais oferece qualidade com muito mais suculência e maciez. Com diversos tipos de cortes diferentes, ela traz tudo o que você procura para criar pratos interessantes, repletos de sabor e originalidade.</p>
+                <div class="text-end">
+                  <button class="btn btn-brand display-5 fs-4 rounded-bottom-5 rounded-start-5 px-5">CONFIRA</button>
+                </div>
               </div>
             </div>
         </div>
